--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  dio: ^5.3.0
+  freezed: ^2.4.1
+  freezed_annotation: ^2.4.1
+  riverpod: ^2.3.6
+  flutter_riverpod: ^2.3.6
+  json_serializable: ^6.7.1
+  http: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +57,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: any
+  freezed: any
+  json_serializable: any
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
