--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,15 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  dio: ^5.3.0
-  freezed: ^2.4.1
-  freezed_annotation: ^2.4.1
-  riverpod: ^2.3.6
-  flutter_riverpod: ^2.3.6
-  json_serializable: ^6.7.1
   http: ^1.1.0
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
 
 
 dev_dependencies:
@@ -58,10 +53,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: any
-  freezed: any
-  json_serializable: any
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
+
 
 
 # For information on the generic Dart part of this file, see the
